--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,14 @@
         <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
         <revision>v8.2.0-SNAPSHOT</revision>
     </properties>
+	
+	<!--Integración continua -->
+	<sonar.projectKey>HackerAndrews_WebGoat</sonar.projectKey>
+  	<sonar.organization>hackerandrews</sonar.organization>
+  	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+ 	<sonar.moduleKey>${project.groupId}:${project.artifactId}
+ 	</sonar.moduleKey>
+ 	<skipTests>true</skipTests>
 
     <modules>
         <module>webgoat-container</module>
